growing-shop-java/src/main/java/com/example/growingshop/global/error/exception/InvalidJwtTokenException.java
package com.example.growingshop.global.error.exception;

public class InvalidJwtTokenException extends RuntimeException {
    public InvalidJwtTokenException(String message) {
        super(message);
    }
}
